css/style.css
html,
body {
  /*background-image: url('../images/background.jpg');*/
  height: 100%;
}

h2 {
  color: #54C6D6;
  text-align: center;
}

.main {
    /* The image used */
    /*background-image: url("background.jpg");*/

    /* Full height */
    height: 100%;

    /* Center and scale the image nicely */
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;

    display: -ms-flexbox;
    display: -webkit-flex;
    display: flex;

    -ms-flex-align: center;
    -webkit-align-items: center;
    -webkit-box-align: center;

    align-items: center;
    justify-content: center;
    position: relative;
    /*z-index: 1;*/

    bottom: 10%;
}

.whei {
  width: 30%;
  transition: all 0.2s;
}

.whei:hover
{
  transform: scale(1, 1);
  width:45%;
  cursor: pointer;
}

.whei > img {
  width: 100%;
  height: auto;
}

.portfolio {
  position: absolute;
  width: 100%;
  margin: 0 auto;
  top: 5%;
  /*border: solid 1px black;*/
  /*background-color: white;*/
  /*visibility: hidden;*/
  display: none;
}

.card-image img{
  max-height: 190px;
}

.whei-header{
  font-family: 'Josefin Sans'
}

.modal-overlay {
  display: none;
}

@media screen and (min-width: 480px) {
    .portfolio {
      width:60%;
    }
}

